<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.laurencemoroney.ch6tipcalc.MainActivity">

<LinearLayout
    android:layout_width="368dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "Enter Amount: $"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="100"
            android:id="@+id/billAmount"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "Tip Amount: $"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tipAmount"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "10%"
        android:id="@+id/button10"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "15%"
        android:id="@+id/button15"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "20%"
        android:id="@+id/button20"/>
</LinearLayout>

</android.support.constraint.ConstraintLayout>
